hightlights block Update

--- a/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
+++ b/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
@@ -73,79 +73,70 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="hightlights">
+                <div class="hightlights">
                     <ul class="hightlights-list">
                         <li class="hightlights-item">
                             <div class="hightlights-img_wrap">
-                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/freeLeague.jpg'})}"
+                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/hightlights_onering.jpg'})}"
                                     alt="hightlight">
                                 <span class="hightlights-label">Free League</span>
                             </div>
                             <div class="hightlights-desc">
-                                Поболтаем с гейм-дизайнерами издательства Free League, авторами Alien RPG, Mutant Year
-                                Zero,
-                                Tales from the Loop и многих других игр.
+                                Поболтаем с геймдизайнерами нового издания The One Ring, игры в мире “Властелина Колец” от издательства Free League.
                             </div>
                         </li>
                         <li class="hightlights-item">
                             <div class="hightlights-img_wrap">
-                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/johanNohr.jpg'})}"
+                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/hightlights_brancalonia.jpg'})}"
                                     alt="hightlight">
-                                <span class="hightlights-label">Johan Nohr</span>
+                                <span class="hightlights-label">Mauro Longo</span>
                             </div>
                             <div class="hightlights-desc">
-                                Уютные разговоры о дизайне в настольных ролевых играх с Йоханном Нором, одним из авторов
-                                Mork Borg.
+                                Поговорим с Мауро Лонго, главным дизайнером игры Brancalonia — спагетти-фэнтези о жуликах, наемниках и мандолинах.
                             </div>
                         </li>
                         <li class="hightlights-item">
                             <div class="hightlights-img_wrap">
-                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/cavalry.jpg'})}"
+                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/hightlights_Excaltedfuneral.jpg'})}"
                                     alt="hightlight">
-                                <span class="hightlights-label">Кавалерия</span>
+                                <span class="hightlights-label">Exalted Funeral</span>
                             </div>
                             <div class="hightlights-desc">
-                                Обсудим здоровенных боевых роботов, далекое будущее и феодализм в настольной ролевой
-                                игре
-                                Кавалерия.
+                                Пообщаемся с командой издательства Exalted Funeral о правильной подаче ваших игр и издании инди-проектов!
                             </div>
                         </li>
                         <li class="hightlights-item">
                             <div class="hightlights-img_wrap">
-                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/Chris_Perkins.jpg'})}"
+                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/hightlights_jasoncarl.jpg'})}"
                                     alt="hightlight">
-                                <span class="hightlights-label">Chris Perkins</span>
+                                <span class="hightlights-label">Jason Carl</span>
                             </div>
                             <div class="hightlights-desc">
-                                Побеседуем с Крисом Перкинсом, ведущим дизайнером D&D, автором "The Curse of Strahd", и
-                                просто МАСТЕРОМ подземелий.
+                                Уютно побеседуем с Джейсоном Карлом, бренд-маркетинг-менеджером Мира Тьмы и ведущим стримов L.A. by Night.
                             </div>
                         </li>
                         <li class="hightlights-item">
                             <div class="hightlights-img_wrap">
-                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/hobbyworld.jpg'})}"
+                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/hightlights_mothership.jpg'})}"
                                     alt="hightlight">
-                                <span class="hightlights-label">Hobby World</span>
+                                <span class="hightlights-label">Sean McCoy</span>
                             </div>
                             <div class="hightlights-desc">
-                                Общение с издательством Hobby World, поговорим о планах на будущее и расспросим обо
-                                всем,
-                                что мы хотели знать.
+                                Обсудим успех Mothership, нашумевшей игры в жанре космического хоррора, вместе с ее дизайнером Шоном МакКоем!
                             </div>
                         </li>
                         <li class="hightlights-item">
                             <div class="hightlights-img_wrap">
-                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/kosti_publ.jpg'})}"
+                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/hightlights_kosti_publ.jpg'})}"
                                     alt="hightlight">
                                 <span class="hightlights-label">Kosti RPG</span>
                             </div>
                             <div class="hightlights-desc">
-                                Презентация издательства Kosti RPG и первых проектов нашей уютной конторы! Расскажем о
-                                планах, идеях и целях!
+                                KostiRPG Publishing — обговорим новости издательства и обсудим наши проекты: Yippee Ki-Yay, “Кавалерию”, ЧСП и другие! 
                             </div>
                         </li>
                     </ul>
-                </div> -->
+                </div>
             </div>
             <!-- <div data-th-if="${programUrl}" class="fest_program">
                 <div class="site_content">
