--- a/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
+++ b/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
@@ -82,7 +82,8 @@
                                 <span class="hightlights-label">Free League</span>
                             </div>
                             <div class="hightlights-desc">
-                                Поболтаем с геймдизайнерами нового издания The One Ring, игры в мире “Властелина Колец” от издательства Free League.
+                                Поболтаем с геймдизайнерами нового издания The One Ring, игры в мире “Властелина Колец”
+                                от издательства Free League.
                             </div>
                         </li>
                         <li class="hightlights-item">
@@ -92,7 +93,8 @@
                                 <span class="hightlights-label">Mauro Longo</span>
                             </div>
                             <div class="hightlights-desc">
-                                Поговорим с Мауро Лонго, главным дизайнером игры Brancalonia — спагетти-фэнтези о жуликах, наемниках и мандолинах.
+                                Поговорим с Мауро Лонго, главным дизайнером игры Brancalonia — спагетти-фэнтези о
+                                жуликах, наемниках и мандолинах.
                             </div>
                         </li>
                         <li class="hightlights-item">
@@ -102,7 +104,8 @@
                                 <span class="hightlights-label">Exalted Funeral</span>
                             </div>
                             <div class="hightlights-desc">
-                                Пообщаемся с командой издательства Exalted Funeral о правильной подаче ваших игр и издании инди-проектов!
+                                Пообщаемся с командой издательства Exalted Funeral о правильной подаче ваших игр и
+                                издании инди-проектов!
                             </div>
                         </li>
                         <li class="hightlights-item">
@@ -112,7 +115,8 @@
                                 <span class="hightlights-label">Jason Carl</span>
                             </div>
                             <div class="hightlights-desc">
-                                Уютно побеседуем с Джейсоном Карлом, бренд-маркетинг-менеджером Мира Тьмы и ведущим стримов L.A. by Night.
+                                Уютно побеседуем с Джейсоном Карлом, бренд-маркетинг-менеджером Мира Тьмы и ведущим
+                                стримов L.A. by Night.
                             </div>
                         </li>
                         <li class="hightlights-item">
@@ -122,7 +126,8 @@
                                 <span class="hightlights-label">Sean McCoy</span>
                             </div>
                             <div class="hightlights-desc">
-                                Обсудим успех Mothership, нашумевшей игры в жанре космического хоррора, вместе с ее дизайнером Шоном МакКоем!
+                                Обсудим успех Mothership, нашумевшей игры в жанре космического хоррора, вместе с ее
+                                дизайнером Шоном МакКоем!
                             </div>
                         </li>
                         <li class="hightlights-item">
@@ -132,7 +137,8 @@
                                 <span class="hightlights-label">Kosti RPG</span>
                             </div>
                             <div class="hightlights-desc">
-                                KostiRPG Publishing — обговорим новости издательства и обсудим наши проекты: Yippee Ki-Yay, “Кавалерию”, ЧСП и другие! 
+                                KostiRPG Publishing — обговорим новости издательства и обсудим наши проекты: Yippee
+                                Ki-Yay, “Кавалерию”, ЧСП и другие!
                             </div>
                         </li>
                     </ul>
@@ -159,27 +165,15 @@
                                 alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
-                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_kavalery.png'})}"
-                                alt="kosticonnect festival game systems">
-                        </li>
-                        <li class="games-item">
-                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_skelets.png'})}"
-                                alt="kosticonnect festival game systems">
-                        </li>
-                        <li class="games-item">
-                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_yky.png'})}"
-                                alt="kosticonnect festival game systems">
-                        </li>
-                        <li class="games-item">
-                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_h0.png'})}"
-                                alt="kosticonnect festival game systems">
-                        </li>
-                        <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_fate.png'})}"
                                 alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_gurps.png'})}"
+                                alt="kosticonnect festival game systems">
+                        </li>
+                        <li class="games-item">
+                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_kavalery.png'})}"
                                 alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
@@ -195,7 +189,15 @@
                                 alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
+                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_skelets.png'})}"
+                                alt="kosticonnect festival game systems">
+                        </li>
+                        <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_WFRP.png'})}"
+                                alt="kosticonnect festival game systems">
+                        </li>
+                        <li class="games-item">
+                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_yky.png'})}"
                                 alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
@@ -204,6 +206,10 @@
                         </li>
                         <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_warhammer.png'})}"
+                                alt="kosticonnect festival game systems">
+                        </li>
+                        <li class="games-item">
+                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_h0.png'})}"
                                 alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
@@ -224,7 +230,7 @@
                     </ul>
                 </div>
             </div>
-             <!-- <div class="fest_program">
+            <!-- <div class="fest_program">
                 <div class="site_content">
                     <h2 class="fest_program-title">
                         <a target="_blank" href="/kosticonnect/games" class="link">ЗАПИШИСЬ</a> НА ИГРУ!
