Zedek Sue Munkao update in hightlights

--- a/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
+++ b/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
@@ -110,6 +110,16 @@
                         </li>
                         <li class="hightlights-item">
                             <div class="hightlights-img_wrap">
+                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/hightlights_atti.jpg'})}"
+                                    alt="hightlight">
+                                <span class="hightlights-label">Zedek Sue & Munkao</span>
+                            </div>
+                            <div class="hightlights-desc">
+                                Уютно побеседуем с Зедеком Сю и Мункао, создателями  завораживающим A Thousand Thousand Islands.
+                            </div>
+                        </li>
+                        <li class="hightlights-item">
+                            <div class="hightlights-img_wrap">
                                 <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/hightlights_mothership.jpg'})}"
                                     alt="hightlight">
                                 <span class="hightlights-label">Sean McCoy</span>
