--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -3,14 +3,71 @@
 
 <div data-th-utext="${mailComponents.head}" data-th-remove="tag"></div>
 
-<body style="margin: 0px; padding: 0px">
+<body style="margin: 0px; padding: 0px; background: #11090f">
     <table border="0" cellpadding="0" cellspacing="0" align="center" width="570"
-        style="max-width: 570px; background: white;">
+        style="max-width: 570px; background: #11090f; padding: 32px; line-height: 24px;">
         <div data-th-utext="${mailComponents.header}" data-th-remove="tag"></div>
-        <tr>
-            <td style="background: white;color: #505050; font-family: Arial; font-size: 14px;">
+        <!-- <tr>
+            <td style="background: #fff; color: #11090F; padding: 32px; border-radius: 4px 4px 0px 0px; font-family: Arial; font-size: 16px; ">
                 <div data-th-utext=" ${content.data.body}" data-th-remove="tag">
                 </div>
+            </td>
+        </tr> -->
+        <tr>
+            <td style="background: #fff; color: #11090F; padding: 32px 0; border-radius: 4px 4px 0px 0px; font-family: Arial; font-size: 16px; ">
+                <table border="0" cellpadding="0" cellspacing="0" align="center" width="506" style="color:#11090F; font-family: Arial; font-size: 16px;">
+                    <tr>
+                        <td style="padding: 0 32px;">Пришло время вернуться в <strong>Snake City!</strong>Событие, которое ты не захочешь пропустить: </td>
+                    </tr>
+                    <tr>
+                        <td style="height: 32px;"></td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">
+                            <strong>KOSTICONNECT 2022! 24-27 ФЕВРАЛЯ</strong>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 16px 0;">
+                            <img data-th-src="${portal.assetUrl({'_path=images/mails/kosticon_teaser.jpg', '_type=absolute'})}" alt="KostiCONnect 2022" width="100%">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">Сотни игр всех жанров ждут тебя! </td>
+                    </tr>
+                    <tr>
+                        <td style="height: 16px;"></td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">
+                            <strong>НАШИ ГОСТИ</strong>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="height: 16px;"></td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">
+                            <ul style="margin: 0px; padding: 0px; list-style-position: inside;">
+                                <li>Геймдизайнеры The One RIng;</li>
+                                <li>Главный дизайнер Brancalonia Мауро Лонго;</li>
+                                <li>Бренд-маркетинг-менеджер Мира Тьмы Джейсон Карл;</li>
+                                <li>Команда издательства Exalted Funeral;</li>
+                                <li>Создатель Mothership Шон МакКой;</li>
+                                <li>Автор и редактор Thousand Thousand Islands Зедек Сю
+                                    и многие другие!</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="height: 16px;"></td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">
+                            <a href="https://www.kostirpg.com/magazin/bilety/onlajn-bilet-2022" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; background: #F07300; padding: 16px 24px; color: #fff; font-weight: 700;" >Купить билет</a>
+                        </td>
+                    </tr>
+                </table>
             </td>
         </tr>
         <div data-th-utext="${mailComponents.footer}" data-th-remove="tag"></div>
