Fix updated mails columns

--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -64,7 +64,7 @@
                     </tr>
                     <tr>
                         <td style="padding: 0 32px;">
-                            <a href="https://www.kostirpg.com/magazin/bilety/onlajn-bilet-2022" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; background: #F07300; padding: 16px 24px; color: #fff; font-weight: 700;" >Купить билет</a>
+                            <a href="https://www.kostirpg.com/kosticonnect" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; background: #F07300; padding: 16px 24px; color: #fff; font-weight: 700;" >Купить билет</a>
                         </td>
                     </tr>
                 </table>
