Update list last item style

--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -53,8 +53,8 @@
                                 <li>Главный дизайнер Brancalonia Мауро Лонго;</li>
                                 <li>Команда издательства Exalted Funeral;</li>
                                 <li>Создатель Mothership Шон МакКой;</li>
-                                <li>Автор и редактор Thousand Thousand Islands Зедек Сю
-                                    и многие другие!</li>
+                                <li>Автор и редактор Thousand Thousand Islands Зедек Сю</li>
+                                <li style="list-style: none;padding-left: 21px;">и многие другие!</li>
                             </ul>
                         </td>
                     </tr>
