--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -24,7 +24,7 @@
                     </tr>
                     <tr>
                         <td style="padding: 0 32px;">
-                            <strong>KOSTICONNECT 2022! 24-27 ФЕВРАЛЯ</strong>
+                            <strong>KOSTICONNECT 2022! 24-27&nbsp;ФЕВРАЛЯ</strong>
                         </td>
                     </tr>
                     <tr>
