Update meil visual

--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -24,7 +24,7 @@
                     </tr>
                     <tr>
                         <td style="padding: 0 32px;">
-                            <strong>KOSTICONNECT 2022! 24-27&nbsp;ФЕВРАЛЯ</strong>
+                            <strong>KOSTICONNECT 2022!</strong> <strong style="white-space: nowrap;">24-27&nbsp;ФЕВРАЛЯ</strong>
                         </td>
                     </tr>
                     <tr>
@@ -48,13 +48,13 @@
                     </tr>
                     <tr>
                         <td style="padding: 0 32px;">
-                            <ul style="margin: 0px; padding: 0px; list-style-position: inside;">
-                                <li>Геймдизайнеры The One RIng;</li>
-                                <li>Главный дизайнер Brancalonia Мауро Лонго;</li>
-                                <li>Команда издательства Exalted Funeral;</li>
-                                <li>Создатель Mothership Шон МакКой;</li>
-                                <li>Автор и редактор Thousand Thousand Islands Зедек Сю</li>
-                                <li style="list-style: none;padding-left: 21px;">и многие другие!</li>
+                            <ul style="margin: 0px; padding: 0 0 0 21px; color: #11090F;">
+                                <li style="margin: 0px;">Геймдизайнеры The One RIng;</li>
+                                <li style="margin: 0px;">Главный дизайнер Brancalonia Мауро Лонго;</li>
+                                <li style="margin: 0px;">Команда издательства Exalted Funeral;</li>
+                                <li style="margin: 0px;">Создатель Mothership Шон МакКой;</li>
+                                <li style="margin: 0px;">Автор и редактор Thousand Thousand Islands Зедек Сю</li>
+                                <li style="list-style: none; margin: 0px;">и многие другие!</li>
                             </ul>
                         </td>
                     </tr>
