--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -3,9 +3,9 @@
 
 <div data-th-utext="${mailComponents.head}" data-th-remove="tag"></div>
 
-<body style="margin: 0px; padding: 0px; background: #11090f">
+<body style="margin: 0px; padding: 0px;  background-image: linear-gradient(#11090f, #11090f)">
     <table border="0" cellpadding="0" cellspacing="0" align="center" width="570"
-        style="max-width: 570px; background: #11090f; padding: 32px; line-height: 24px;">
+        style="max-width: 570px;  background-image: linear-gradient(#11090f, #11090f); padding: 32px; line-height: 24px;">
         <div data-th-utext="${mailComponents.header}" data-th-remove="tag"></div>
         <!-- <tr>
             <td style="background: #fff; color: #11090F; padding: 32px; border-radius: 4px 4px 0px 0px; font-family: Arial; font-size: 16px; ">
