--- a/app/src/main/resources/site/pages/mails/userActivation.html
+++ b/app/src/main/resources/site/pages/mails/userActivation.html
@@ -3,21 +3,27 @@
 
 <div data-th-utext="${mailComponents.head}" data-th-remove="tag"></div>
 
-<body style="margin: 0px; padding: 0px">
+<body style="margin: 0px; padding: 0px;  background-image: linear-gradient(#11090f, #11090f)">
     <table border="0" cellpadding="0" cellspacing="0" align="center" width="570"
-        style="max-width: 570px; background: white;">
+    style="max-width: 570px; background-image: linear-gradient(#11090f, #11090f); padding: 32px; line-height: 1.5;">
         <div data-th-utext="${mailComponents.header}" data-th-remove="tag"></div>
         <tr>
-            <td
-                style="font-size: 24px; font-family: Roboto; font-weight: bold; line-height: 1.33; color: #1d1f24; padding: 0 0 15px;">
-                Привет!
-            </td>
-        </tr>
-        <tr>
-            <td style="font-size: 14px; font-family: Roboto; line-height: 1.71; color: #505050; padding: 0 0 25px;">
-                Перейдите по
-                <a data-th-href="${activationUrl}" style="color: #0095f8;">ссылке</a>
-                чтоб активировать ваш аккаунт.
+            <td style="background: #fff; color: #11090F; padding: 32px; border-radius: 4px 4px 0px 0px; font-family: Arial; font-size: 16px; ">
+                <table border="0" cellpadding="0" cellspacing="0" align="center" width="506" style="color:#11090F; font-family: Arial; font-size: 16px;">
+                    <tr>
+                        <td
+                            style="font-size: 24px;font-weight: bold; padding: 0 0 15px;">
+                            Привет!
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 0 25px;">
+                            Перейдите по
+                            <a data-th-href="${activationUrl}" style="color: #F07300;">ссылке</a>
+                            чтоб активировать ваш аккаунт.
+                        </td>
+                    </tr>
+                </table>
             </td>
         </tr>
 
