--- a/app/src/main/resources/site/pages/mails/orderCreated.html
+++ b/app/src/main/resources/site/pages/mails/orderCreated.html
@@ -119,7 +119,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td tyle="font-weight: bold; font-size: 14px;">
+                                                <td style="font-weight: bold; font-size: 14px;">
                                                     Доставка
                                                 </td>
                                                 <td style="text-align: right; font-size: 14px;"
