--- a/app/src/main/resources/site/pages/mails/orderCreated.html
+++ b/app/src/main/resources/site/pages/mails/orderCreated.html
@@ -67,7 +67,7 @@
                     <tr>
                         <td style="padding: 0 0;">
                             <table border="0" cellpadding="0" cellspacing="0" width="100%"
-                                style="border-bottom: 1px solid #dedede; padding: 0 0 20px 0; line-height: 1.71; ">
+                                style="border-bottom: 1px solid #dedede; padding: 0 0 20px 0; line-height: 1.71; min-width: 100%;">
                                 <tr>
                                     <td width="50%"
                                         style="padding: 0 5px 20px 0;  font-size: 14px; vertical-align: top;">
@@ -91,13 +91,13 @@
                                             Адресс доставки
                                         </div>
                                         <div data-th-text="${cart.name + ' ' + cart.surname}"></div>
-                                        <div data-th-text="${cart.address}"></div>
-                                        <div data-th-text="${cart.city}"></div>
-                                        <div data-th-text="${'Tel: ' + cart.phone}"></div>
+                                        <div style="color: #11090F;" data-th-text="${cart.address}"></div>
+                                        <div style="color: #11090F;" data-th-text="${cart.city}"></div>
+                                        <div style="color: #11090F;" data-th-text="${'Tel: ' + cart.phone}"></div>
                                     </td>
                                     <td width="50%"
                                         style=" font-size: 14px; vertical-align: top; padding-left: 5px;">
-                                        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width: 100%;">
+                                        <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                             <tr>
                                                 <td colspan="2" style=" font-size: 14px;">
                                                     <div style="font-weight: bold; ">
