--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -84,26 +84,27 @@
                 </div>
             </div>
             <div class="k_gdp-sign_up">
-                <!--
-                <form class="k_gdp-sign_up-step_1 js_game-sign-up-step-1">
-                    <h5 data-th-unless="${user}" class="k_gdp-sign_up-subtitle">
-                        Для записи на игру вам необходимо <a class="js_login-required k_gdp-sign_up-cta">Войти</a>, или
-                        заполнить форму
-                        ниже.
-                    </h5>
-                    <div class="form-group" data-th-unless="${user and user.content.displayName}">
-                        <input class="js_get-user-data" name="username" placeholder="Ваше имя" required>
+                <form class="k_gdp-sign_up-step_1 js_game-sign-up-step-1"
+                    data-th-if="${!formData.festivalIsMeetUp and (formData.userNameRequired or formData.ticketRequired)}">
+                    <div class="form-group" data-th-if="${formData.userNameRequired}">
+                        <input class="js_get-user-data" name="firstName" placeholder="Ваше имя" required>
                     </div>
-                    <div class="form-group" data-th-unless="${user and user.content.data.email}">
-                        <input class="js_get-user-data" name="email" placeholder="Электронная почта" required>
+                    <div class="form-group" data-th-if="${formData.ticketRequired}">
+                        <input class="js_get-user-data js_festival-ticket-id" name="ticket" placeholder="Номер билета"
+                            required>
                     </div>
-                    <div class="form-group" data-th-unless="${user and user.content.data.phone}">
-                        <input class="js_get-user-data" name="phone" placeholder="Номер телефона" required>
+                    <div class="k_gdp-agreement form-group">
+                        <input required type="checkbox" name="agreement" id="fest-agreement" hidden />
+                        <label for="fest-agreement" class="label-checkbox">Я прочитал и принимаю
+                            <a href="/kosticonnect/pravila-kosticonnect" target="_blank">условия фестиваля</a></label>
                     </div>
                 </form>
-                -->
-                <!--
-                <div class="k_gdp-signed js_signout-block" data-th-classappend="${gameSigned ? '' : 'hidden'}">
+                <div data-th-if="${formData.requireDiscord && discordUrl}"
+                    class="k_gdp-sign_up-step_2 js_game-sign-up-step-2" style="display:none">
+                    <a data-th-href="${discordUrl}" class="button social_login-discord" name="discord"
+                        placeholder="discord"> Залогиньтесь через Дискорд</a>
+                </div>
+                <div class="k_gdp-signed js_game-signout-block" data-th-classappend="${gameSigned ? '' : 'hidden'}">
                     <div class="k_games-time_title">Вы уже записаны на эту игру.</div>
                     <button class="kosticonnect-button primary k_gdp-sign_out-btn js_sign-out-of-game">
                         ОТПИСАТЬСЯ ОТ ИГРЫ
@@ -114,51 +115,11 @@
                         </span>
                     </a>
                 </div>
-                <div class="k_gdp-actions js_signin-block" data-th-classappend="${gameSigned ? 'hidden' : ''}">
-                    <button data-th-if="${spaceAvailable}"
-                        data-th-attr="data-step=${user != null && user.content.data.phone != null && user.content.data.phone != '' ? 'form' : 'init'}"
-                        class="kosticonnect-button primary k_gdp-sign_up-btn js_sign-up-for-game">ЗАПИСАТЬСЯ НА
-                        ИГРУ</button>
-                    <div data-th-unless="${spaceAvailable}" class="k_games-time_title">Мест больше нет.
-                    </div>
+                <div class="k_gdp-actions js_game-signin-block" data-th-classappend="${gameSigned ? 'hidden' : ''}">
+                    <button class="kosticonnect-button primary k_gdp-sign_up-btn js_sign-up-for-game">
+                        ЗАПИСАТЬСЯ НА ИГРУ
+                    </button>
                     <a class="kosticonnect-button inverted k_gdp-back icon-back-arrow" data-th-href="${gamesListPage}">
-                        <span>
-                            Назад к списку
-                        </span>
-                    </a>
-                </div>
-                -->
-                <form class="k_gdp-sign_up-step_1 js_game-sign-up-step-1">
-                    <div class="form-group" data-th-unless="${user and user.content.data.firstName}">
-                        <input class="js_get-user-data" name="firstName" placeholder="Ваше имя" required>
-                    </div>
-                    <div class="form-group"
-                        data-th-unless="${user and (user.content.data.kosticonnect2021 or user.data.roles.gameMaster)}">
-                        <input class="js_get-user-data js_festival-ticket-id" name="ticket" placeholder="Номер билета"
-                            required>
-                    </div>
-                    <div class="k_gdp-agreement form-group">
-                        <input required type="checkbox" name="agreement" id="fest-agreement" hidden />
-                        <label for="fest-agreement" class="label-checkbox">Я прочитал и принимаю
-                            <a href="/kosticonnect/pravila-kosticonnect" target="_blank">условия фестиваля</a></label>
-                    </div>
-                </form>
-                <div class="k_gdp-sign_up-step_2 js_game-sign-up-step-2"
-                    data-th-if="${discordUrl and !user.content.data.discord}" style="display:none">
-                    <a data-th-href="${discordUrl}" class="button social_login-discord" name="discord"
-                        placeholder="discord"> Залогиньтесь через Дискорд</a>
-                </div>
-                <div class="k_gdp-signed" data-th-if="${gameSigned}">
-                    <div class="k_games-time_title">Вы уже записаны на эту игру.</div>
-                    <button data-step="init"
-                        class="kosticonnect-button primary k_gdp-sign_out-btn js_sign-out-of-game">ОТПИСАТЬСЯ ОТ
-                        ИГРЫ</button>
-                </div>
-                <div class="k_gdp-actions">
-                    <button data-step="init" data-th-unless="${gameSigned}"
-                        class="kosticonnect-button primary k_gdp-sign_up-btn js_sign-up-for-game">ЗАПИСАТЬСЯ НА
-                        ИГРУ</button>
-                    <a class="kosticonnect-button inverted k_gdp-back icon-back-arrow" href="/kosticonnect/games/">
                         <span>
                             Назад к списку
                         </span>
@@ -172,6 +133,7 @@
         <div class="snackbar-close icon-delete js_snackbar-close"></div>
     </div>
     <footer class="footer" data-th-remove="tag" data-th-utext="${pageComponents.footer}"></footer>
+    <div data-th-utext="${formDataVariables}" data-th-remove="tag"></div>
 </body>
 
 </html>
