--- a/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
+++ b/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
@@ -115,7 +115,8 @@
                                 <span class="hightlights-label">Zedek Sue & Munkao</span>
                             </div>
                             <div class="hightlights-desc">
-                                Уютно побеседуем с Зедеком Сю и Мункао, создателями  завораживающим A Thousand Thousand Islands.
+                                Уютно побеседуем с Зедеком Сю и Мункао, создателями завораживающим A Thousand Thousand
+                                Islands.
                             </div>
                         </li>
                         <li class="hightlights-item">
@@ -143,14 +144,14 @@
                     </ul>
                 </div>
             </div>
-            <!-- <div data-th-if="${programUrl}" class="fest_program">
+            <div data-th-if="${programUrl}" class="fest_program">
                 <div class="site_content">
                     <h2 class="fest_program-title">
                         <a target="_blank" data-th-href="${programUrl}" class="link">СКАЧАТЬ</a> ПОЛНУЮ ПРОГРАММУ
                         ФЕСТИВАЛЯ!
                     </h2>
                 </div>
-            </div> -->
+            </div>
             <div class="site_content">
                 <div class="games">
                     <h2 class="games-title kosticonnect-title">МНОЖЕСТВО ИГР</h2>
