--- a/app/src/main/resources/site/pages/landing/landing.html
+++ b/app/src/main/resources/site/pages/landing/landing.html
@@ -4,6 +4,7 @@
 <head data-th-utext="${pageComponents.pagehead}"></head>
 
 <body class="b-meet_up-page landingPage">
+    <div data-th-remove="tag" data-th-utext="${pageComponents.loginRegisterModal}"></div>
     <div data-th-remove="tag" data-th-utext="${pageComponents.festivalHeader}"></div>
     <main class="b-meet_up-wrap" data-portal-region="main">
         <div data-th-if="${mainRegion}" data-th-remove="tag">
