--- a/app/src/main/resources/site/pages/games/games.html
+++ b/app/src/main/resources/site/pages/games/games.html
@@ -11,7 +11,7 @@
         <div class="kosticonnect-content k_games">
             <div class="site_content">
                 <div data-th-if="${mygamesLink}" class="k_games-my_games_btn">
-                    <a data-th-href="${mygamesLink}" class="kosticonnect-button primary">Мои Игры</a>
+                    <a data-th-href="${kostirpgUrl+mygamesLink}" class="kosticonnect-button primary">Мои Игры</a>
                 </div>
                 <div class="k_games-filters">
                     <div class="k_games-filters-control">
