--- a/app/src/main/resources/site/pages/user/games/gm/gmComp.html
+++ b/app/src/main/resources/site/pages/user/games/gm/gmComp.html
@@ -1,4 +1,4 @@
-<div class="my_games-gm-wrapper">
+<div data-th-if="${showGmComponents}" class="my_games-gm-wrapper">
     <div class="my_games-gm-header">
         <h2 class="my_games-title" data-th-text="${portal.localize({'_key=myGames.forGM', '_locale=ru'})}"></h2>
         <p class="my_games-caption" data-th-text="${portal.localize({'_key=myGames.forGM.caption', '_locale=ru'})}"></p>
