multiple improvements for kk2022

--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -17,7 +17,7 @@
                     <img data-th-if="${(!game.processed.bigImage or game.processed.bigImage.placeholder) and game.processed.system and !game.processed.system.localizable}"
                         data-th-src="${portal.assetUrl({'_path=images/gameSystems/default.jpg'})}">
                     <span data-th-if="${game.content.data.exclusive}" class="k_games-exclusive_game"><i
-                            class="icon-rock"></i> Экслюзивная игра</span>
+                            class="icon-rock"></i> Турбо игра</span>
                 </div>
             </div>
         </div>
