--- a/app/src/main/resources/site/pages/games/gamesBlock.html
+++ b/app/src/main/resources/site/pages/games/gamesBlock.html
@@ -24,7 +24,7 @@
     </li>
 
     <li class="k_games-item">
-        <a class="k_games-item_link" data-th-href="${game.processed.url}">
+        <a class="k_games-item_link" data-th-href="${game.processed.url}" data-th-classappend="${game.processed.currUserPlays ? 'm-user_plays' : ''}">
             <span class="k_games-img_wrap">
                 <img data-th-if="${game.processed.image and !game.processed.image.placeholder}"
                     data-th-src="${game.processed.image.url}">
@@ -33,9 +33,12 @@
                 <img data-th-if="${(!game.processed.image or game.processed.image.placeholder) and game.processed.system and !game.processed.system.localizable}"
                     data-th-src="${portal.assetUrl({'_path=images/gameSystems/default.jpg'})}">
                 <span class="k_games-seats">
-                    <span>места</span>
-                    <span data-th-class="${'js_game-seats-' + game.content._id}"
-                        data-th-text="${game.processed.seatsReserved + '/' + game.content.data.maxPlayers}"></span>
+                    <span data-th-unless="${game.processed.currUserPlays}">
+                        <span>места</span>
+                        <span data-th-class="${'js_game-seats-' + game.content._id}"
+                            data-th-text="${game.processed.seatsReserved + '/' + game.content.data.maxPlayers}"></span>
+                    </span>
+                    <span data-th-if="${game.processed.currUserPlays}">Моя Игра</span>
                 </span>
                 <span data-th-if="${game.content.data.exclusive}" class="k_games-exclusive_game"><i
                         class="icon-rock"></i> Турбо игра</span>
@@ -44,6 +47,9 @@
             <h4 class="k_games-game_system" data-th-if="${game.processed.system.localizable}"
                 data-th-text="${portal.localize({'_key=myGames.gameSystem.' + game.processed.system.text, '_locale=ru'})}">
             </h4>
+            <h3 class="k_games-game_short_info"
+                data-th-text="${ (game.processed.master ?  (' | '  + game.processed.master.displayName) + ' | ' : '') + game.processed.block.processed.time.start + ' - ' + game.processed.block.processed.time.end}">
+            </h3>
             <h4 data-th-unless="${game.processed.system.localizable}" class="k_games-game_system"
                 data-th-text="${game.processed.system.text}">
             </h4>
@@ -53,10 +59,6 @@
             <span class="k_games-game_actions">
                 <span class="k_games-link_more" data-th-href="${game.processed.url}">Узнать больше</span>
             </span>
-            <h3 class="k_games-game_name" data-th-if="${game.processed.currUserPlays}">Ты тут играешь</h3>
-            <h3 class="k_games-game_name"
-                data-th-text="${game.processed.block.processed.time.start + ' - ' + game.processed.block.processed.time.end + (game.processed.master ?  (' | '  + game.processed.master.displayName) : '')}">
-            </h3>
 
             <div class="k_games-item_actions" data-th-if="${cityBoss}">
                 <button class="kosticonnect-button primary js_modal-show js_game-players-list"
