--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -33,10 +33,12 @@
                 <div class="k_gdp-desc" data-th-utext="${game.content.data.description}"></div>
             </div>
             <div class="k_gdp-right_col">
+                <!--
                 <div class="k_gdp-info" data-th-if="${game.processed.master}">
                     <div class="k_gdp-label">ВЕДУЩИЙ</div>
                     <div class="k_gdp-value" data-th-utext="${game.processed.master.displayName}"></div>
                 </div>
+                -->
                 <div class="k_gdp-info">
                     <div class="k_gdp-label">ВРЕМЯ</div>
                     <div class="k_gdp-value">
@@ -83,7 +85,7 @@
                     <div class="k_gdp-value" data-th-utext="${game.processed.additionalInfo}"></div>
                 </div>
             </div>
-            <div class="k_gdp-sign_up">
+            <div class="k_gdp-sign_up" data-th-if="${formData.registerStarted}">
                 <form class="k_gdp-sign_up-step_1 js_game-sign-up-step-1"
                     data-th-if="${!formData.festivalIsMeetUp and (formData.userNameRequired or formData.ticketRequired)}">
                     <div class="form-group" data-th-if="${formData.userNameRequired}">
