--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -85,6 +85,17 @@
                     <div class="k_gdp-value" data-th-utext="${game.processed.additionalInfo}"></div>
                 </div>
             </div>
+            <div class="k_gdp-early_access" data-th-unless="${formData.registerStarted}">
+                <h3 class="k_gdp-early_access-title">Регистрация еще не началась.</h3>
+                <h4 class="k_gdp-early_access-subtitle">Вы можете подключить билет и дискорд зараней в <a href="">настройках профиля.</a></h4>
+                <div class="k_gdp-actions">
+                    <a class="kosticonnect-button inverted k_gdp-back icon-back-arrow" data-th-href="${gamesListPage}">
+                        <span>
+                            Назад к списку
+                        </span>
+                    </a>
+                </div>
+            </div>
             <div class="k_gdp-sign_up" data-th-if="${formData.registerStarted}">
                 <form class="k_gdp-sign_up-step_1 js_game-sign-up-step-1"
                     data-th-if="${!formData.festivalIsMeetUp and (formData.userNameRequired or formData.ticketRequired)}">
